--- a/index.html
+++ b/index.html
@@ -7,20 +7,13 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <div id="main" class="main">
+    <div id="JMS_main" class="main">
 <!--        地图部分，用table实现   -->
         <table id="landmine"></table>
 <!--        右侧选择栏   -->
         <div id="operation">
             <div class="tip">剩余雷数：<span id="landMineCount" class="light red">0</span>个</div>
             <div class="tip">持续时间：<span id="costTime" class="light f60">0</span>秒</div>
-
-            <fieldset>
-                <legend>难度选择：</legend>
-                <input type="radio" name="level" id="llevel" checked="checked" value="10" /><label for="llevel">初级（10*10）</label><br />
-                <input type="radio" name="level" id="mlevel" value="15" /><label for="mlevel">中级（15*15）</label><br />
-                <input type="radio" name="level" id="hlevel" value="20" /><label for="hlevel">高级（20*20）</label><br />
-            </fieldset>
 
             <input type="button" id="begin" value="开始游戏" /><br />
 
